Clicking the edge of a Bone in Edit mode Crashes Blender in 2.9 Alpha #77560

Closed
opened 2020-06-07 07:35:25 +02:00 by Gilbert Matos · 8 comments

System Information
AMD Ryzen 7 3700x

Operating system: Windows 10 Pro 64 Bit
Graphics card: ASUS ROG Strix GeForce GTX 1070 Ti 8GB GDDR5 Advanced Edition

Blender Version
Broken: (2.90.0-b74cc23dc478 alpha, )
Worked: (newest version of Blender that worked as expected)

Short description of error
There are no errors, the program just self terminates.

Exact steps for others to reproduce the error

4 Steps

1.Create a bone.
2.go into edit mode.
3.left click on the edge of said bone.
4.Profit

This happens in a brand new blender scene file.

Based on the default startup or an attached .blend file (as simple as possible).

Video for further proof.
https://imgur.com/a/lzzOqzG

**System Information** AMD Ryzen 7 3700x Operating system: Windows 10 Pro 64 Bit Graphics card: ASUS ROG Strix GeForce GTX 1070 Ti 8GB GDDR5 Advanced Edition **Blender Version** Broken: (2.90.0-b74cc23dc478 alpha, ) Worked: (newest version of Blender that worked as expected) **Short description of error** There are no errors, the program just self terminates. **Exact steps for others to reproduce the error** 4 Steps 1.Create a bone. 2.go into edit mode. 3.left click on the edge of said bone. 4.Profit This happens in a brand new blender scene file. Based on the default startup or an attached .blend file (as simple as possible). Video for further proof. https://imgur.com/a/lzzOqzG
Author

Added subscriber: @GMMX6

Added subscriber: @GMMX6

#77701 was marked as duplicate of this issue

#77701 was marked as duplicate of this issue
Gilbert Matos changed title from Clicking the edge of a Bone in Edit mode Crashes Blender in and 2.9 to Clicking the edge of a Bone in Edit mode Crashes Blender in 2.9 Alpha 2020-06-07 07:36:02 +02:00
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

tested version: aed11c673e

 BLI_system_backtrace + 52
 get_nearest_editbonepoint + 1530
 ED_armature_edit_select_pick + 158
 view3d_select_exec + 685
 view3d_select_invoke + 61
 wm_operator_invoke + 708
 wm_handler_operator_call + 1521
 wm_handlers_do_keymap_with_keymap_handler + 419
 wm_handlers_do_intern + 463
 wm_handlers_do + 1381
 wm_event_do_handlers + 2937
 WM_main + 39
 main + 1022
 start + 1
BLI_assert failed: source/blender/editors/armature/armature_select.c:776, get_nearest_editbonepoint(), at 'base && ebone'

Both base & ebone are NULL.

tested version: aed11c673e ``` BLI_system_backtrace + 52 get_nearest_editbonepoint + 1530 ED_armature_edit_select_pick + 158 view3d_select_exec + 685 view3d_select_invoke + 61 wm_operator_invoke + 708 wm_handler_operator_call + 1521 wm_handlers_do_keymap_with_keymap_handler + 419 wm_handlers_do_intern + 463 wm_handlers_do + 1381 wm_event_do_handlers + 2937 WM_main + 39 main + 1022 start + 1 BLI_assert failed: source/blender/editors/armature/armature_select.c:776, get_nearest_editbonepoint(), at 'base && ebone' ``` Both `base` & `ebone` are NULL.

This issue was referenced by fc8a7a44b2

This issue was referenced by fc8a7a44b200e37066a8753c514564c674eace30

Added subscribers: @DarkKnight, @ideasman42, @Xorrito

Added subscribers: @DarkKnight, @ideasman42, @Xorrito

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2020-06-10 10:07:29 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77560
No description provided.